# koharu-april

./: AGENTS.md  Cargo.toml
koharu-app/src/: engine.rs  io.rs  pipeline.rs  storage.rs
koharu-core/: Cargo.toml
koharu-core/src/: commands.rs  protocol.rs
koharu-core/src/parse/: epub.rs  mod.rs
koharu-rpc/src/: api.rs
koharu-rpc/src/mcp/: mod.rs
koharu-rpc/src/routes/: projects.rs
ui/: .oxlintrc.json  openapi.json
ui/components/: MenuBar.tsx  Navigator.tsx  SettingsDialog.tsx
ui/lib/api/blobs/: blobs.ts
ui/lib/api/documents/: documents.ts
ui/lib/api/downloads/: downloads.ts
ui/lib/api/exports/: exports.ts
ui/lib/api/jobs/: jobs.ts
ui/lib/api/llm/: llm.ts
ui/lib/api/processing/: processing.ts
ui/lib/api/regions/: regions.ts
ui/lib/api/schemas/: apiError.ts  brushRegionRequest.ts  createTextBlock.ts  dataConfig.ts  deleteDocumentsRequest.ts  documentDetail.ts  documentStyle.ts  documentSummary.ts  downloadState.ts  engineCatalogEntry.ts  exportBatchRequest.ts  exportDocumentParams.ts  exportLayer.ts  exportResult.ts  fontFaceInfo.ts  fontPrediction.ts  fontSource.ts  getConfig200.ts  getDocumentThumbnailParams.ts  getEngineCatalog200.ts  googleFontCatalogEntry.ts  googleFontCatalogResponse.ts  httpConfig.ts  importDocumentsBody.ts  importDocumentsParams.ts  importMode.ts  importResult.ts  index.ts  inpaintRegionRequest.ts  jobState.ts  jobStatus.ts  llmCatalog.ts  llmCatalogModel.ts  llmGenerationOptions.ts  llmLoadRequest.ts  llmProviderCatalog.ts  llmState.ts  (+28 more)
ui/lib/machines/: processingMachine.ts
ui/lib/stores/: editorUiStore.ts
(+11 files in other folders)
