[package]
name = "koharu-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
natord.workspace = true
percent-encoding = "2.3.2"
regex = "1.12.3"
roxmltree = "0.21.1"
schemars = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true, features = ["deflate"] }

[dev-dependencies]
serde_json = { workspace = true }
